--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -1,48 +1,62 @@
 @font-face {
   font-family: "Jelly";
-  font-display:block;
+  font-display: block;
   src: url("https://raw.githubusercontent.com/yeemachine/kalidoface-live2d-models/main/Font/kalidoface-jelly.ttf")
     format("truetype");
 }
 
 @font-face {
   font-family: "Kalicon";
-  font-display:block;
+  font-display: block;
   src: url("https://raw.githubusercontent.com/yeemachine/kalidoface-live2d-models/main/Font/kalidoface-regular.otf")
     format("opentype");
 }
 
 @font-face {
   font-family: "Kalicon Variable";
-  font-display:block;
+  font-display: block;
   src: url("https://raw.githubusercontent.com/yeemachine/kalidoface-live2d-models/main/Font/kalidoface-variable.ttf")
     format("truetype");
 }
 
 @keyframes jiggle {
-  0%   { font-variation-settings: "wght" 100; }
-  100% { font-variation-settings: "wght" 250; }
+  0% {
+    font-variation-settings: "wght" 100;
+  }
+  100% {
+    font-variation-settings: "wght" 250;
+  }
 }
 
 @keyframes greenBG {
-  0%   { background: #4bc34b; }
-  50% { background: #95ef95 }
-  100% { background: #4bc34b }
+  0% {
+    background: #4bc34b;
+  }
+  50% {
+    background: #95ef95;
+  }
+  100% {
+    background: #4bc34b;
+  }
 }
 
 @keyframes drawAcross {
-  0%   { width: 0%; }
-  100% { width: 100% }
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
 }
 
 :root {
   --offblack: #16161d;
   --lapizBlue: #4450F3;
-  --lightBlue:#009df7;
-  --lapizGrey:#3f3f4e;
-  --lightRed:rgb(189 70 106);
-/*   --iconbg: #58586e; */
-  --iconbg:#504e62;
+  --lightBlue: #009df7;
+  --lapizGrey: #3f3f4e;
+  --lightRed: rgb(189 70 106);
+  /*   --iconbg: #58586e; */
+  --iconbg: #504e62;
   --accent: #233db5;
   --pos: #109210;
   --neg: #c51d1d;
@@ -57,10 +71,12 @@ a {
   color: inherit;
   text-decoration: none;
 }
-body,i,input,button{
-    font-family:-apple-system, BlinkMacSystemFont, "Segoe UI",
-               Roboto, Oxygen-Sans, Ubuntu, Cantarell,
-               "Helvetica Neue", sans-serif;
+body,
+i,
+input,
+button {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 body {
   margin: 0;
@@ -72,33 +88,70 @@ body {
   overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  position:absolute;
+  position: absolute;
   background: var(--offblack);
-  display:flex;
-  align-items:center;
-  justify-content:center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-h1{
-      font-family: 'Jelly';
-    z-index: 999;
-    width: clamp(280px, 80vw, 600px);
-    text-align: center;
-    font-size: clamp(40px, 11.5vw, 80px);
-    margin-bottom: clamp(80px, 22.5vw, 120px);
-  color:white;
+pwa-update::part(updateToast),
+pwa-update::part(offlineToast) {
+  z-index: 100;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+
+  font-size: 11px;
+
+  --button-background: var(--lightBlue);
+  padding: 10px 15px 10px 15px;
+}
+pwa-update::part(updateToast) {
+  background: #504e62;
+  width: 280px;
+  /*   display:none; */
+}
+pwa-update::part(offlineToast) {
+  background: #504e6235;
+}
+pwa-update::part(updateToast) button {
+  background: var(--lightBlue);
+}
+
+@media only screen and (max-width: 600px) {
+  pwa-update::part(updateToast),
+  pwa-update::part(offlineToast) {
+    bottom: auto;
+    left: 16px;
+    right: auto;
+    top: 16px;
+  }
+  pwa-update::part(updateToast) {
+    width: auto;
+    right:16px;
+  }
+}
+
+h1 {
+  font-family: "Jelly";
+  z-index: 999;
+  width: clamp(280px, 80vw, 600px);
+  text-align: center;
+  font-size: clamp(40px, 11.5vw, 80px);
+  margin-bottom: clamp(80px, 22.5vw, 120px);
+  color: white;
   font-variation-settings: "wght" 100;
-  animation: jiggle .8s infinite;
-  animation-timing-function: cubic-bezier(.26,.3,.66,.65);
-  font-weight:normal;
-  transition:opacity 1s;
+  animation: jiggle 0.8s infinite;
+  animation-timing-function: cubic-bezier(0.26, 0.3, 0.66, 0.65);
+  font-weight: normal;
+  transition: opacity 1s;
 }
-h1.fade{
-  opacity:0;
-  pointer-events:none;
+h1.fade {
+  opacity: 0;
+  pointer-events: none;
 }
-h1.pause{
-  animation:none;
+h1.pause {
+  animation: none;
 }
 
 .hide-scrollbar {
@@ -117,8 +170,8 @@ button {
   border: none;
   padding: 0;
 }
-button:hover{
-  cursor:pointer
+button:hover {
+  cursor: pointer;
 }
 
 /* a subtle focus style for keyboard-input elements */
@@ -140,7 +193,7 @@ body.user-is-tabbing input:focus + container {
   outline: 5px auto -webkit-focus-ring-color !important;
 }
 
-.no_highlights{
+.no_highlights {
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -155,7 +208,7 @@ body.user-is-tabbing input:focus + container {
   font-size: 60px;
   font-weight: normal;
   font-style: normal;
-  line-height: -.1;
+  line-height: -0.1;
   letter-spacing: normal;
   text-transform: none;
   display: inline-block;
@@ -164,14 +217,14 @@ body.user-is-tabbing input:focus + container {
   direction: ltr;
   -webkit-font-feature-settings: "liga";
   -webkit-font-smoothing: antialiased;
-  touch-action:none;
+  touch-action: none;
 }
-.kalicon.variable{
+.kalicon.variable {
   font-family: "Kalicon Variable";
-  transition: font-variation-settings .2s;
+  transition: font-variation-settings 0.2s;
   font-variation-settings: "anim" 0;
 }
-.kalicon.variable.end{
+.kalicon.variable.end {
   font-variation-settings: "anim" 100;
 }
 
@@ -187,55 +240,54 @@ body.user-is-tabbing input:focus + container {
   transition: 0.15s;
   font-size: 64px;
   text-shadow: 0px 0px 4px #00000030;
-  pointer-events:none;
+  pointer-events: none;
   /*   transition: .5s;
   font-variation-settings: "wght" 100;
   transition-property: font-variation-settings; */
 }
-.icon-fill{
-  position:absolute;
+.icon-fill {
+  position: absolute;
 }
-.icon-fill:before{
-  content:'iconfill';
-  width:100%;
-  height:100%;
+.icon-fill:before {
+  content: "iconfill";
+  width: 100%;
+  height: 100%;
 }
-
-
 
 .solid {
   position: relative;
   pointer-events: none;
 }
 
-
-
 @media only screen and (hover: hover) {
-  button:hover .fill,label:hover .fill {
-  animation: jiggle 0.4s 1;
-  animation-timing-function: cubic-bezier(0.26, 0.3, 0.66, 0.65);
-  transform: scale(1.2);
-  cursor: pointer;
-}
-  button.unavailable:hover .fill{
-  animation:none;
-  transform:scale(1);
+  button:hover .fill,
+  label:hover .fill {
+    animation: jiggle 0.4s 1;
+    animation-timing-function: cubic-bezier(0.26, 0.3, 0.66, 0.65);
+    transform: scale(1.2);
+    cursor: pointer;
+  }
+  button.unavailable:hover .fill {
+    animation: none;
+    transform: scale(1);
   }
 }
 
-@media only screen and (hover: none), screen and (pointer: none), screen and (pointer: course)  {
+@media only screen and (hover: none),
+  screen and (pointer: none),
+  screen and (pointer: course) {
   .forceAnimate {
     animation: jiggle 0.4s 1;
     animation-timing-function: cubic-bezier(0.26, 0.3, 0.66, 0.65);
   }
-  .unavailable.forceAnimate{
-    animation:none;
+  .unavailable.forceAnimate {
+    animation: none;
   }
-  button:active .fill,label:active .fill {
+  button:active .fill,
+  label:active .fill {
     transform: scale(1.2);
   }
-  button.unavailable:active .fill{
+  button.unavailable:active .fill {
     transform: scale(1);
   }
-  
 }
