--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -158,7 +158,7 @@ body {
     0
     env(safe-area-inset-left, 0); */
 }
-@media all and (display-mode: standalone) and (max-width: 600px) {
+@media all and (display-mode: fullscreen) and (max-width: 600px) {
   body{
     height:100vh;
   }
