--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -8,7 +8,7 @@
 @font-face {
   font-family: "Kalicon";
   font-display: block;
-  src: url("https://yeemachine.github.io/kalidoface-live2d-models/Font/kalidoface-regular.otf")
+  src: url("https://cdn.glitch.com/29e07830-2317-4b15-a044-135e73c7f840%2FKalidoface-Regular.otf?v=1625608734480")
     format("opentype");
 }
 
@@ -104,7 +104,8 @@
   --lightRed: rgb(189 70 106);
   --peach:#f07792;
   /*   --iconbg: #58586e; */
-  --darkgrey: #504e62;
+/*   --darkgrey: #504e62; */
+  --darkgrey: #314249;
   --iconbg:#676482;
   --accent: #233db5;
   --pos: #109210;
@@ -138,12 +139,11 @@ html{
 box-sizing: inherit;
 } */
 body {
+  --bgThemeLight:#537b8a;
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-/*   max-width: 100%;
-  max-height: 100%; */
   overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -152,52 +152,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-/*    padding:
-    0
-    env(safe-area-inset-right, 0)
-    0
-    env(safe-area-inset-left, 0); */
+}
+
+body.transparent{
+  background:transparent;
 }
 @media all and (display-mode: fullscreen) {
-  body{
+  body,html{
     height:100vh;
   }
 }
-/* pwa-update::part(updateToast),
-pwa-update::part(offlineToast) {
-  z-index: 100;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
-  font-size: 11px;
-
-  --button-background: var(--lightBlue);
-  padding: 10px 15px 10px 15px;
-}
-pwa-update::part(updateToast) {
-  background: #504e62;
-  width: 280px;
-}
-pwa-update::part(offlineToast) {
-  background: #504e6235;
-}
-pwa-update::part(updateToast) button {
-  background: var(--lightBlue);
-}
-
-@media only screen and (max-width: 600px) {
-  pwa-update::part(updateToast),
-  pwa-update::part(offlineToast) {
-    bottom: auto;
-    left: 16px;
-    right: auto;
-    top: 16px;
-  }
-  pwa-update::part(updateToast) {
-    width: auto;
-    right:16px;
-  }
-} */
 
 h1 {
   font-family: "Jelly";
@@ -276,7 +241,7 @@ body.user-is-tabbing input:focus + container {
 
 .kalicon {
   font-family: "Kalicon";
-  font-size: 60px;
+  font-size: 70px;
   font-weight: normal;
   font-style: normal;
   line-height: -0.1;
@@ -309,8 +274,8 @@ body.user-is-tabbing input:focus + container {
   color: var(--iconbg);
   transform: scale(1);
   transition: 0.15s;
-  font-size: 64px;
-  text-shadow: 0px 0px 8px #00000020;
+  font-size: 72px;
+/*   text-shadow: 0px 0px 8px #00000020; */
   pointer-events: none;
   /*   transition: .5s;
   font-variation-settings: "wght" 100;
@@ -318,6 +283,9 @@ body.user-is-tabbing input:focus + container {
 }
 .fill.small{
   font-size: 40px;
+}
+.fill.medium{
+  font-size: 58px;
 }
 .icon-fill {
   position: absolute;
@@ -335,6 +303,20 @@ body.user-is-tabbing input:focus + container {
 .solid.small{
   font-size:44px;
 }
+.solid.medium{
+  font-size:52px;
+}
+.svgIcon{
+    width: 28px;
+    height: 28px;
+    margin-top: 3px;
+}
+.svgIcon.small{
+    width: 22px;
+    height: 22px;
+    margin-top: 3px;
+}
+
 .pulse{
     --scale:1.8;
     content: '';
@@ -357,12 +339,12 @@ body.user-is-tabbing input:focus + container {
   background:red;
   }
 
-@media only screen and (hover: hover) {
+@media only screen and (hover: hover) and (pointer: fine){
   button:hover .fill,
   label:hover .fill {
     animation: jiggle 0.4s 1;
     animation-timing-function: cubic-bezier(0.26, 0.3, 0.66, 0.65);
-    transform: scale(1.2);
+    transform: scale(1.1);
     cursor: pointer;
   }
   button.unavailable:hover .fill {
@@ -383,9 +365,10 @@ body.user-is-tabbing input:focus + container {
   }
   button:active .fill,
   label:active .fill {
-    transform: scale(1.2);
+    transform: scale(1.1);
   }
   button.unavailable:active .fill {
     transform: scale(1);
   }
 }
+
